--- a/css/home.css
+++ b/css/home.css
@@ -133,6 +133,7 @@ article > h2{
     margin-top: 0em;
     padding-bottom: 1em;
     font-size: 2.5em;
+    letter-spacing: 1px;
 }
 article  > img{
         padding: 1em;
