--- a/css/projects.css
+++ b/css/projects.css
@@ -32,6 +32,7 @@ section:nth-child(1) > div{
        margin-top: 0em;
        padding-bottom: 1em;
        font-size: 2.5em;
+       letter-spacing: 1px;
    }
    article  > img{
            padding: 1em;
