--- a/css/var.css
+++ b/css/var.css
@@ -6,7 +6,7 @@
 }
 
 *{
-    font-family: 'Bebas Neue', cursive;
+    font-family: 'Bebas Neue', lato;
 
 }
 
@@ -55,9 +55,9 @@ main > section{
 /* Footer */
 footer{
     background-color: var(--secondary-color);
-    padding: 0 0 2em 0 ;
+    padding: 0 0 1em 0 ;
     margin-top: 10em;
-
+    z-index: 1000;
  
 }
 
@@ -77,10 +77,22 @@ footer > h1, footer > div > a:hover {
 footer > h1{
     text-align: center;
     font-size: 2.5em;
+    margin: 0;
+    padding: 0.1em 0 0 0 ;
 }
 
 footer > div {
     display: flex;
-    text-align: center  ;
-    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    flex-direction: row;
+}
+
+@media (max-width: 600px){
+    footer > div {
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        flex-direction: column;
+    }
 }
